[package]
name = "simple-rtp-engine"
version = "0.1.0"
edition = "2021"

[workspace.metadata.workspaces]
independent = true

[workspace]
resolver = "2"
members = ["packages/pubsub"]

[workspace.dependencies]
tokio = { version = "1.38.0", features = [
  "sync",
  "rt",
  "net",
  "time",
  "macros",
  "rt-multi-thread",
] }
serde = { version = "1.0.203", features = ["derive"] }
parking_lot = { version = "0.12.3" }

[dependencies]
tokio = { version = "1.38.0", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["rt"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_bencode = { version = "0.2.4" }
public-ip-address = { version = "0.3.0" }
sdp = { version = "0.6.2" }
