[package]
name = "simple-rtp-engine"
version = "0.1.0"
edition = "2021"

[workspace.metadata.workspaces]
independent = true

[workspace]
resolver = "2"
members = ["packages/media", "packages/pubsub"]

[workspace.dependencies]
tokio = { version = "1.38.0", features = [
  "sync",
  "rt",
  "net",
  "time",
  "macros",
  "rt-multi-thread",
] }
serde = { version = "1.0.203", features = ["derive"] }
parking_lot = { version = "0.12.3" }
log = { version = "0.4.22" }
env_logger = { version = "0.11.3" }
sans-io-runtime = { git = "https://github.com/8xFF/sans-io-runtime.git", rev = "1be9705b4fe9852b7c1ac66dc610fedf94a83971" }
convert-enum = { version = "0.1.0" }

[dependencies]
tokio = { version = "1.38.0", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["rt"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_bencode = { version = "0.2.4" }
public-ip-address = { version = "0.3.0" }
sdp = { version = "0.6.2" }
sans-io-runtime = { git = "https://github.com/8xFF/sans-io-runtime.git", rev = "1be9705b4fe9852b7c1ac66dc610fedf94a83971" }
convert-enum = { version = "0.1.0" }
log = { version = "0.4.22" }
env_logger = { version = "0.11.3" }

[dev-dependencies]
signal-hook = { version = "0.3.17" }
clap = { version = "4.5.8", features = ["derive", "help", "env"] }
shlex = { version = "1.3.0" }
reedline-repl-rs = { version = "1.0.7", features = ["async"] }
